[package]
name = "fraktor-actor-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor no_std actor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "actor", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
alloc = []
alloc-metrics = []
test-support = ["critical-section/std"]

[dependencies]
async-trait = { workspace = true }
fraktor-utils-rs = { workspace = true, default-features = false, features = ["alloc", "unsize"] }
critical-section = { workspace = true, default-features = false }
heapless = { workspace = true, default-features = false, features = ["portable-atomic"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
portable-atomic-util = { workspace = true, default-features = false, features = ["alloc"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
cortex-m = { workspace = true, optional = true }
hashbrown = { workspace = true, default-features = false }
ahash = { workspace = true, default-features = false }
serde = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true, features = ["alloc"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
proptest = "1.5"
critical-section = { workspace = true, features = ["std"] }
serde_json = { workspace = true }

[[test]]
name = "actor_path_e2e"
path = "tests/actor_path_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "death_watch"
path = "tests/death_watch.rs"
required-features = ["test-support"]

[[test]]
name = "event_stream"
path = "tests/event_stream.rs"
required-features = ["test-support"]

[[test]]
name = "ping_pong"
path = "tests/ping_pong.rs"
required-features = ["test-support"]

[[test]]
name = "supervisor"
path = "tests/supervisor.rs"
required-features = ["test-support"]

[[test]]
name = "system_events"
path = "tests/system_events.rs"
required-features = ["test-support"]

[[test]]
name = "system_lifecycle"
path = "tests/system_lifecycle.rs"
required-features = ["test-support"]

[[example]]
name = "typed_event_stream"
path = "examples/typed_event_stream.rs"
required-features = ["test-support"]

[[example]]
name = "classic_timers"
path = "examples/classic_timers.rs"
required-features = ["test-support"]

[[example]]
name = "typed_receptionist_router"
path = "examples/typed_receptionist_router.rs"
required-features = ["test-support"]

[lints]
workspace = true
