[package]
name = "fraktor-cluster-adaptor-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor standard adaptor bindings for cluster runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "cluster", "adaptor", "std"]
categories = ["concurrency"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-cluster-adaptor-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
aws-ecs = ["dep:aws-sdk-ecs", "dep:aws-config"]
test-support = ["fraktor-cluster-core-rs/test-support", "fraktor-actor-core-rs/test-support", "fraktor-remote-rs/test-support"]

[dependencies]
fraktor-cluster-core-rs = { workspace = true }
fraktor-actor-core-rs = { workspace = true }
fraktor-actor-adaptor-rs = { workspace = true }
fraktor-utils-rs = { workspace = true, features = ["alloc", "std", "unsize"] }
fraktor-remote-rs = { workspace = true, features = ["std"] }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true, features = ["std"] }
aws-sdk-ecs = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "net", "macros"] }

[lints]
workspace = true

[dev-dependencies]
fraktor-actor-core-rs = { workspace = true, features = ["test-support"] }
fraktor-actor-adaptor-rs = { workspace = true, features = ["tokio-executor", "test-support"] }
fraktor-cluster-core-rs = { workspace = true, features = ["test-support"] }
fraktor-remote-rs = { workspace = true, features = ["std", "tokio-transport", "tokio-executor", "test-support"] }
fraktor-utils-rs = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util"] }
anyhow = { workspace = true }
