[package]
name = "fraktor-cluster-rs"
version = "0.2.11"
edition = "2024"
description = "protoactor-go compatible cluster core for fraktor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "cluster", "actor", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-cluster-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
std = ["fraktor-actor-rs/std", "fraktor-remote-rs/std", "fraktor-utils-rs/std"]
test-support = ["std", "fraktor-actor-rs/test-support", "fraktor-remote-rs/test-support"]

[dependencies]
fraktor-actor-rs = { workspace = true }
fraktor-utils-rs = { workspace = true }
fraktor-remote-rs = { workspace = true }

[dev-dependencies]
fraktor-actor-rs = { workspace = true, features = ["std", "tokio-executor", "test-support"] }
fraktor-remote-rs = { workspace = true, features = ["std", "tokio-transport", "tokio-executor", "test-support"] }
fraktor-utils-rs = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util"] }
anyhow = { workspace = true }

[[example]]
name = "quickstart"
path = "examples/quickstart/main.rs"
required-features = ["std"]

[[example]]
name = "cluster_extension_no_std"
path = "examples/cluster_extension_no_std/main.rs"
required-features = ["test-support"]

[[example]]
name = "cluster_extension_tokio"
path = "examples/cluster_extension_tokio/main.rs"
required-features = ["std"]
