[package]
name = "fraktor-remote-core-rs"
version = "0.2.11"
edition = "2024"
description = "Pekko Artery compatible remote core for fraktor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "remote", "actor", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-remote-core-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
test-support = []

[dependencies]
fraktor-actor-core-rs = { workspace = true }
fraktor-utils-rs = { workspace = true }
ahash = { workspace = true, default-features = false }
bytes = { workspace = true }
hashbrown = { workspace = true, default-features = false }
libm = { workspace = true }

[lints]
workspace = true
