[package]
name = "fraktor-remote-rs"
version = "0.2.11"
edition = "2024"
description = "Remoting facilities for the fraktor actor runtime"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/j5ik2o/fraktor-rs"
repository = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-remote-rs"
readme = "../../README.ja.md"
keywords = ["actors", "runtime", "remoting"]
categories = ["concurrency", "network-programming"]

[features]
default = []
std = ["fraktor-actor-rs/std", "fraktor-utils-rs/std"]
tokio-executor = ["std", "fraktor-actor-rs/tokio-executor"]
tokio-transport = ["std", "dep:tokio"]
test-support = []

[dependencies]
fraktor-actor-rs = { workspace = true }
fraktor-utils-rs = { workspace = true, features = ["alloc", "unsize"] }
portable-atomic = { workspace = true, default-features = false }
hashbrown = { workspace = true }
ahash = { workspace = true, default-features = false }
spin = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "net", "sync", "time", "io-util"] }

[dev-dependencies]
fraktor-actor-rs = { workspace = true, features = ["test-support"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
anyhow = { workspace = true }

[[test]]
name = "quickstart"
path = "tests/quickstart.rs"
required-features = ["test-support"]

[[example]]
name = "loopback_quickstart"
path = "examples/loopback_quickstart/main.rs"
required-features = ["std", "test-support"]

[[example]]
name = "tokio_tcp_quickstart"
path = "examples/tokio_tcp_quickstart/main.rs"
required-features = ["std", "test-support", "tokio-transport", "tokio-executor"]
