[package]
name = "fraktor-stream-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor stream core for no_std environments"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "stream", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-stream-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
compression = ["dep:miniz_oxide"]

[dependencies]
fraktor-utils-rs = { workspace = true, default-features = false, features = ["alloc"] }
fraktor-actor-rs = { workspace = true }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
miniz_oxide = { version = "0.9", optional = true, default-features = false, features = ["with-alloc"] }

[lints]
workspace = true

[dev-dependencies]
fraktor-actor-rs = { workspace = true, features = ["test-support"] }
