[package]
name = "fraktor-streams-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor stream core for no_std and std environments"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "streams", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-streams-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
std = ["fraktor-utils-rs/std", "fraktor-actor-rs/std", "fraktor-actor-rs/test-support"]

[dependencies]
fraktor-utils-rs = { workspace = true, default-features = false, features = ["alloc"] }
fraktor-actor-rs = { workspace = true }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }

[dev-dependencies]
fraktor-actor-rs = { workspace = true, features = ["test-support"] }

[[example]]
name = "actor_system_basic_std"
path = "examples/actor_system_basic_std/main.rs"
required-features = ["std"]

[[example]]
name = "source_sink_minimal_std"
path = "examples/source_sink_minimal_std/main.rs"
required-features = ["std"]

[[example]]
name = "map_filter_std"
path = "examples/map_filter_std/main.rs"
required-features = ["std"]

[[example]]
name = "fold_aggregation_std"
path = "examples/fold_aggregation_std/main.rs"
required-features = ["std"]

[[example]]
name = "custom_graph_stage_std"
path = "examples/custom_graph_stage_std/main.rs"
required-features = ["std"]

[[example]]
name = "backpressure_demo_std"
path = "examples/backpressure_demo_std/main.rs"
required-features = ["std"]
