[package]
name = "fraktor-utils-adaptor-std-rs"
version = "0.2.11"
edition = "2024"
description = "Std adapter helpers for fraktor-utils-core-rs (placeholder pending RuntimeMutex Port/Adapter)"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "utils", "adaptor", "std"]
categories = ["concurrency"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-utils-adaptor-std-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
test-support = ["dep:spin"]

[dependencies]
fraktor-utils-core-rs = { workspace = true, features = ["alloc", "unsize"] }
spin = { workspace = true, optional = true }

[lints]
workspace = true
