[package]
name = "fraktor-utils-adaptor-std-rs"
version = "0.2.11"
edition = "2024"
description = "Std adapter helpers for fraktor-utils-core-rs"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "utils", "adaptor", "std"]
categories = ["concurrency"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-utils-adaptor-std-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []

[dependencies]
fraktor-utils-core-rs = { workspace = true, features = ["alloc", "unsize"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }

[lints]
workspace = true
