[package]
name = "fraktor-utils-core-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc", "unsize"]
alloc = []
interrupt-cortex-m = ["cortex-m"]
force-portable-arc = []
unsize = []

[dependencies]
async-trait = { workspace = true }
critical-section = { workspace = true, optional = false }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
cortex-m = { workspace = true, optional = true }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
