[package]
name = "fraktor-utils-std-rs"
version = "0.2.9"
edition = "2024"
description = "Standard-library helpers complementing fraktor-utils-core"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/j5ik2o/fraktor-rs"
repository = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-utils-std-rs"
readme = "../../README.md"
keywords = ["actors", "runtime", "std"]
categories = ["concurrency"]

[dependencies]
fraktor-utils-core-rs = { workspace = true }
